@@ -2,12 +2,14 @@ package dtm.ide.navigation;
 
 import dtm.di.annotations.Async;
 import dtm.stools.component.panels.editor.code.api.Location;
+import dtm.stools.component.panels.editor.code.api.Position;
 import dtm.stools.component.panels.editor.code.api.Range;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -41,6 +43,10 @@ public class PhpDefinitionIndex {
             "(?m)^[\\t ]*(?:namespace|use)[\\t ]+[^;]+;");
     private static final Set<String> IGNORED = Set.of(
             ".git", ".idea", ".orion", "node_modules", "runtime", "log", "cache", "tmp"
+    );
+    private static final Set<String> PHP_BUILTIN_TYPES = Set.of(
+            "array", "bool", "callable", "false", "float", "int", "iterable",
+            "mixed", "never", "null", "object", "string", "true", "void"
     );
     private volatile Snapshot snapshot = Snapshot.empty(null);
 
@@ -182,6 +188,47 @@ public class PhpDefinitionIndex {
             }
         }
         return List.copyOf(anchors);
+    }
+
+    public List<MissingInterfaceImplementation> missingInterfaceImplementations(
+            String text, Path sourceFile) {
+        if (text == null || text.isBlank() || sourceFile == null) return List.of();
+        Path normalizedFile = sourceFile.toAbsolutePath().normalize();
+        List<TypeDefinition> currentTypes = new ArrayList<>();
+        indexTypes(normalizedFile, text, namespaceOf(text), currentTypes);
+
+        Map<String, TypeDefinition> byName = new HashMap<>();
+        snapshot.types().stream()
+                .filter(type -> !type.file().equals(normalizedFile))
+                .forEach(type -> byName.put(
+                        type.qualifiedName().toLowerCase(Locale.ROOT), type));
+        currentTypes.forEach(type -> byName.put(
+                type.qualifiedName().toLowerCase(Locale.ROOT), type));
+
+        List<MissingInterfaceImplementation> output = new ArrayList<>();
+        for (TypeDefinition type : currentTypes) {
+            if (type.kind() != TypeKind.CLASS || type.abstractType()) continue;
+
+            Map<String, MethodDeclaration> required = new java.util.LinkedHashMap<>();
+            collectInterfaceMethods(type, byName, required, new LinkedHashSet<>());
+            if (required.isEmpty()) continue;
+
+            Set<String> implemented = new LinkedHashSet<>();
+            collectClassMethods(type, byName, implemented, new LinkedHashSet<>());
+            required.keySet().removeAll(implemented);
+            if (required.isEmpty()) continue;
+
+            List<MethodDeclaration> missing = List.copyOf(required.values());
+            Insertion insertion = implementationInsertion(text, type, missing);
+            Range classRange = type.location().range();
+            output.add(new MissingInterfaceImplementation(
+                    type.name(),
+                    classRange,
+                    insertion.position(),
+                    insertion.text(),
+                    missing.stream().map(MethodDeclaration::name).toList()));
+        }
+        return List.copyOf(output);
     }
 
     private List<Definition> rankedDefinitions(String text, int offset) {
@@ -353,6 +400,7 @@ public class PhpDefinitionIndex {
             if (closeBrace < 0) closeBrace = source.length();
 
             Set<String> parents = new LinkedHashSet<>();
+            Set<String> traits = new LinkedHashSet<>();
             String relations = matcher.group(3) == null ? "" : matcher.group(3);
             Matcher implementsMatcher = IMPLEMENTS.matcher(relations);
             if (implementsMatcher.find()) {
@@ -364,15 +412,48 @@ public class PhpDefinitionIndex {
                     addRelations(parents, extendsMatcher.group(1), namespace, imports);
                 }
             }
+            if (kind == TypeKind.CLASS || kind == TypeKind.TRAIT) {
+                Matcher traitUse = USE.matcher(source);
+                traitUse.region(openBrace + 1, closeBrace);
+                while (traitUse.find()) {
+                    if (!isDirectTypeMember(source, openBrace, traitUse.start())) continue;
+                    String traitList = traitUse.group(1);
+                    if (traitList.contains("{")) {
+                        traitList = traitList.substring(0, traitList.indexOf('{'));
+                    }
+                    for (String raw : traitList.split(",")) {
+                        String value = raw.strip();
+                        if (value.isBlank()) continue;
+                        String resolved = resolveTypeName(value, namespace, imports);
+                        if (!resolved.contains("\\") && namespace != null && !namespace.isBlank()) {
+                            resolved = qualified(namespace, resolved);
+                        }
+                        traits.add(resolved);
+                    }
+                }
+            }
 
             Map<String, Location> methods = new HashMap<>();
+            Map<String, MethodDeclaration> methodDeclarations = new java.util.LinkedHashMap<>();
             Matcher methodMatcher = METHOD.matcher(source);
             methodMatcher.region(openBrace + 1, closeBrace);
             while (methodMatcher.find()) {
+                if (!isDirectTypeMember(source, openBrace, methodMatcher.start())) continue;
                 String method = methodMatcher.group(1);
-                methods.putIfAbsent(method.toLowerCase(Locale.ROOT),
-                        definition(file, source, methodMatcher.start(1), methodMatcher.end(1),
-                                Kind.FUNCTION, qualified(namespace, method)).location());
+                String key = method.toLowerCase(Locale.ROOT);
+                Location methodLocation = definition(
+                        file, source, methodMatcher.start(1), methodMatcher.end(1),
+                        Kind.FUNCTION, qualified(namespace, method)).location();
+                methods.putIfAbsent(key, methodLocation);
+                String signature = methodSignature(source, methodMatcher);
+                if (signature != null) {
+                    if (kind == TypeKind.INTERFACE) {
+                        signature = qualifyMethodSignature(
+                                signature, namespace, imports, qualified(namespace, name));
+                    }
+                    methodDeclarations.putIfAbsent(
+                            key, new MethodDeclaration(method, signature, methodLocation));
+                }
             }
 
             Location location = definition(file, source, matcher.start(2), matcher.end(2),
@@ -380,8 +461,365 @@ public class PhpDefinitionIndex {
             output.add(new TypeDefinition(
                     file.toAbsolutePath().normalize(), name, qualified(namespace, name), kind,
                     matcher.start(), matcher.start(2), openBrace, closeBrace,
-                    location, Set.copyOf(parents), Map.copyOf(methods)));
+                    location, Set.copyOf(parents), Set.copyOf(traits), Map.copyOf(methods),
+                    Collections.unmodifiableMap(new java.util.LinkedHashMap<>(methodDeclarations)),
+                    isAbstractType(source, matcher.start())));
         }
+    }
+
+    private static void collectInterfaceMethods(
+            TypeDefinition type,
+            Map<String, TypeDefinition> byName,
+            Map<String, MethodDeclaration> output,
+            Set<String> visited) {
+        String key = type.qualifiedName().toLowerCase(Locale.ROOT);
+        if (!visited.add(key)) return;
+        for (String parentName : type.parents()) {
+            TypeDefinition parent = byName.get(parentName.toLowerCase(Locale.ROOT));
+            if (parent == null) continue;
+            if (parent.kind() == TypeKind.INTERFACE) {
+                collectInterfaceContract(parent, byName, output, visited);
+            } else if (parent.kind() == TypeKind.CLASS) {
+                collectInterfaceMethods(parent, byName, output, visited);
+            }
+        }
+    }
+
+    private static void collectInterfaceContract(
+            TypeDefinition type,
+            Map<String, TypeDefinition> byName,
+            Map<String, MethodDeclaration> output,
+            Set<String> visited) {
+        String key = type.qualifiedName().toLowerCase(Locale.ROOT);
+        if (!visited.add(key)) return;
+        for (String parentName : type.parents()) {
+            TypeDefinition parent = byName.get(parentName.toLowerCase(Locale.ROOT));
+            if (parent != null && parent.kind() == TypeKind.INTERFACE) {
+                collectInterfaceContract(parent, byName, output, visited);
+            }
+        }
+        type.methodDeclarations().forEach(output::putIfAbsent);
+    }
+
+    private static void collectClassMethods(
+            TypeDefinition type,
+            Map<String, TypeDefinition> byName,
+            Set<String> output,
+            Set<String> visited) {
+        String key = type.qualifiedName().toLowerCase(Locale.ROOT);
+        if (!visited.add(key)) return;
+        output.addAll(type.methods().keySet());
+        for (String traitName : type.traits()) {
+            TypeDefinition trait = byName.get(traitName.toLowerCase(Locale.ROOT));
+            if (trait != null && trait.kind() == TypeKind.TRAIT) {
+                collectClassMethods(trait, byName, output, visited);
+            }
+        }
+        for (String parentName : type.parents()) {
+            TypeDefinition parent = byName.get(parentName.toLowerCase(Locale.ROOT));
+            if (parent != null && parent.kind() == TypeKind.CLASS) {
+                collectClassMethods(parent, byName, output, visited);
+            }
+        }
+    }
+
+    private static Insertion implementationInsertion(
+            String source, TypeDefinition type, List<MethodDeclaration> missing) {
+        int closeBrace = Math.clamp(type.bodyEnd(), 0, source.length());
+        int closeLineStart = lineStart(source, closeBrace);
+        boolean closeOnOwnLine = source.substring(closeLineStart, closeBrace).isBlank();
+        int insertionOffset = closeOnOwnLine ? closeLineStart : closeBrace;
+        String baseIndent = closeOnOwnLine
+                ? source.substring(closeLineStart, closeBrace) : lineIndent(source, type.declarationStart());
+        String indentUnit = memberIndentUnit(source, type, baseIndent);
+        String memberIndent = baseIndent + indentUnit;
+        String newline = source.contains("\r\n") ? "\r\n" : "\n";
+        boolean hasBodyContent = !source.substring(
+                Math.min(type.bodyStart() + 1, closeBrace), closeBrace).isBlank();
+
+        StringBuilder generated = new StringBuilder();
+        if (!closeOnOwnLine) generated.append(newline);
+        else if (hasBodyContent) generated.append(newline);
+        for (int i = 0; i < missing.size(); i++) {
+            if (i > 0) generated.append(newline);
+            String signature = missing.get(i).signature()
+                    .replaceFirst("(?i)^abstract\\s+", "")
+                    .replaceFirst("(?i)^(?=function\\b)", "public ");
+            generated.append(memberIndent).append(signature).append(newline)
+                    .append(memberIndent).append('{').append(newline)
+                    .append(memberIndent).append(indentUnit)
+                    .append("throw new \\LogicException('Not implemented');").append(newline)
+                    .append(memberIndent).append('}').append(newline);
+        }
+        if (!closeOnOwnLine) generated.append(baseIndent);
+        PositionData position = positionAt(lineStarts(source), insertionOffset);
+        return new Insertion(Position.of(position.line(), position.col()), generated.toString());
+    }
+
+    private static String methodSignature(String source, Matcher methodMatcher) {
+        int functionStart = methodMatcher.start();
+        int start = functionStart;
+        int lineStart = lineStart(source, functionStart);
+        String prefix = source.substring(lineStart, functionStart).strip();
+        if (prefix.matches("(?i)(?:(?:public|protected|private|static|abstract|final)\\s*)*")) {
+            start = lineStart;
+            while (start < functionStart && Character.isWhitespace(source.charAt(start))) start++;
+        }
+
+        int openParen = source.indexOf('(', methodMatcher.end(1));
+        if (openParen < 0) return null;
+        int closeParen = matchingDelimiter(source, openParen, '(', ')');
+        if (closeParen < 0) return null;
+        int end = declarationEnd(source, closeParen + 1);
+        if (end < 0) return null;
+        return source.substring(start, end).strip()
+                .replaceFirst("[\\s;{]+$", "");
+    }
+
+    private static String qualifyMethodSignature(
+            String signature,
+            String namespace,
+            Map<String, String> imports,
+            String ownerType) {
+        int function = signature.toLowerCase(Locale.ROOT).indexOf("function");
+        int openParen = function < 0 ? -1 : signature.indexOf('(', function);
+        int closeParen = openParen < 0 ? -1
+                : matchingDelimiter(signature, openParen, '(', ')');
+        if (closeParen < 0) return signature;
+
+        String parameters = qualifyParameterTypes(
+                signature.substring(openParen + 1, closeParen),
+                namespace, imports, ownerType);
+        StringBuilder result = new StringBuilder(signature.length() + 32)
+                .append(signature, 0, openParen + 1)
+                .append(parameters)
+                .append(')');
+        int colon = signature.indexOf(':', closeParen + 1);
+        if (colon < 0) {
+            result.append(signature.substring(closeParen + 1));
+        } else {
+            result.append(signature, closeParen + 1, colon + 1)
+                    .append(qualifyTypeExpression(
+                            signature.substring(colon + 1),
+                            namespace, imports, ownerType));
+        }
+        return result.toString();
+    }
+
+    private static String qualifyParameterTypes(
+            String parameters,
+            String namespace,
+            Map<String, String> imports,
+            String ownerType) {
+        StringBuilder result = new StringBuilder(parameters.length() + 32);
+        int start = 0;
+        int round = 0;
+        int square = 0;
+        int curly = 0;
+        char quote = 0;
+        for (int i = 0; i <= parameters.length(); i++) {
+            char c = i < parameters.length() ? parameters.charAt(i) : ',';
+            if (quote != 0) {
+                if (c == '\\') i++;
+                else if (c == quote) quote = 0;
+            } else if (c == '\'' || c == '"') {
+                quote = c;
+            } else if (c == '(') {
+                round++;
+            } else if (c == ')') {
+                round--;
+            } else if (c == '[') {
+                square++;
+            } else if (c == ']') {
+                square--;
+            } else if (c == '{') {
+                curly++;
+            } else if (c == '}') {
+                curly--;
+            } else if (c == ',' && round == 0 && square == 0 && curly == 0) {
+                if (start > 0) result.append(',');
+                result.append(qualifyParameter(
+                        parameters.substring(start, i), namespace, imports, ownerType));
+                start = i + 1;
+            }
+        }
+        return result.toString();
+    }
+
+    private static String qualifyParameter(
+            String parameter,
+            String namespace,
+            Map<String, String> imports,
+            String ownerType) {
+        int variable = parameter.indexOf('$');
+        if (variable < 0) return parameter;
+        int typeEnd = variable;
+        while (typeEnd > 0 && Character.isWhitespace(parameter.charAt(typeEnd - 1))) typeEnd--;
+        if (typeEnd >= 3 && parameter.substring(typeEnd - 3, typeEnd).equals("...")) {
+            typeEnd -= 3;
+            while (typeEnd > 0 && Character.isWhitespace(parameter.charAt(typeEnd - 1))) typeEnd--;
+        }
+        if (typeEnd > 0 && parameter.charAt(typeEnd - 1) == '&') {
+            typeEnd--;
+            while (typeEnd > 0 && Character.isWhitespace(parameter.charAt(typeEnd - 1))) typeEnd--;
+        }
+        int typeStart = typeEnd;
+        while (typeStart > 0 && typeExpressionChar(parameter.charAt(typeStart - 1))) typeStart--;
+        if (typeStart == typeEnd) return parameter;
+        return parameter.substring(0, typeStart)
+                + qualifyTypeExpression(
+                parameter.substring(typeStart, typeEnd), namespace, imports, ownerType)
+                + parameter.substring(typeEnd);
+    }
+
+    private static String qualifyTypeExpression(
+            String expression,
+            String namespace,
+            Map<String, String> imports,
+            String ownerType) {
+        Matcher matcher = Pattern.compile("\\??\\\\?[A-Za-z_][A-Za-z0-9_\\\\]*")
+                .matcher(expression);
+        StringBuilder result = new StringBuilder(expression.length() + 16);
+        while (matcher.find()) {
+            String raw = matcher.group();
+            String nullable = raw.startsWith("?") ? "?" : "";
+            String type = nullable.isEmpty() ? raw : raw.substring(1);
+            String lower = type.replaceFirst("^\\\\+", "").toLowerCase(Locale.ROOT);
+            String replacement;
+            if (PHP_BUILTIN_TYPES.contains(lower)
+                    || lower.equals("static") || lower.equals("parent")) {
+                replacement = type;
+            } else if (lower.equals("self")) {
+                replacement = "\\" + ownerType;
+            } else {
+                replacement = "\\" + resolveTypeName(type, namespace, imports);
+            }
+            matcher.appendReplacement(
+                    result, Matcher.quoteReplacement(nullable + replacement));
+        }
+        matcher.appendTail(result);
+        return result.toString();
+    }
+
+    private static boolean typeExpressionChar(char value) {
+        return Character.isLetterOrDigit(value)
+                || value == '_' || value == '\\' || value == '?'
+                || value == '|' || value == '&' || Character.isWhitespace(value);
+    }
+
+    private static int declarationEnd(String source, int start) {
+        int round = 0;
+        int square = 0;
+        char quote = 0;
+        for (int i = start; i < source.length(); i++) {
+            char c = source.charAt(i);
+            if (quote != 0) {
+                if (c == '\\') i++;
+                else if (c == quote) quote = 0;
+                continue;
+            }
+            if (c == '\'' || c == '"') quote = c;
+            else if (c == '(') round++;
+            else if (c == ')') round--;
+            else if (c == '[') square++;
+            else if (c == ']') square--;
+            else if (round == 0 && square == 0 && (c == ';' || c == '{')) return i;
+        }
+        return -1;
+    }
+
+    private static int matchingDelimiter(
+            String source, int open, char opening, char closing) {
+        int depth = 0;
+        char quote = 0;
+        for (int i = open; i < source.length(); i++) {
+            char c = source.charAt(i);
+            if (quote != 0) {
+                if (c == '\\') i++;
+                else if (c == quote) quote = 0;
+                continue;
+            }
+            if (c == '\'' || c == '"') quote = c;
+            else if (c == opening) depth++;
+            else if (c == closing && --depth == 0) return i;
+        }
+        return -1;
+    }
+
+    private static boolean isDirectTypeMember(String source, int bodyStart, int offset) {
+        int depth = 0;
+        char quote = 0;
+        boolean lineComment = false;
+        boolean blockComment = false;
+        for (int i = bodyStart + 1; i < offset; i++) {
+            char c = source.charAt(i);
+            char next = i + 1 < offset ? source.charAt(i + 1) : 0;
+            if (lineComment) {
+                if (c == '\n') lineComment = false;
+            } else if (blockComment) {
+                if (c == '*' && next == '/') {
+                    blockComment = false;
+                    i++;
+                }
+            } else if (quote != 0) {
+                if (c == '\\') i++;
+                else if (c == quote) quote = 0;
+            } else if (c == '/' && next == '/') {
+                lineComment = true;
+                i++;
+            } else if (c == '#') {
+                lineComment = true;
+            } else if (c == '/' && next == '*') {
+                blockComment = true;
+                i++;
+            } else if (c == '\'' || c == '"') {
+                quote = c;
+            } else if (c == '{') {
+                depth++;
+            } else if (c == '}') {
+                depth--;
+            }
+        }
+        return depth == 0;
+    }
+
+    private static boolean isAbstractType(String source, int classStart) {
+        int start = lineStart(source, classStart);
+        return source.substring(start, classStart).matches("(?is).*\\babstract\\s+");
+    }
+
+    private static String memberIndentUnit(
+            String source, TypeDefinition type, String baseIndent) {
+        for (MethodDeclaration method : type.methodDeclarations().values()) {
+            int offset = offsetAt(source, method.location().range().start());
+            String indent = lineIndent(source, offset);
+            if (indent.startsWith(baseIndent) && indent.length() > baseIndent.length()) {
+                return indent.substring(baseIndent.length());
+            }
+        }
+        return source.contains("\n\t") ? "\t" : "    ";
+    }
+
+    private static int offsetAt(String source, Position position) {
+        int[] starts = lineStarts(source);
+        if (position == null || position.line() < 0 || position.line() >= starts.length) return 0;
+        return Math.min(source.length(), starts[position.line()] + Math.max(0, position.col()));
+    }
+
+    private static int lineStart(String source, int offset) {
+        int newline = source.lastIndexOf('\n', Math.max(0, offset - 1));
+        return newline < 0 ? 0 : newline + 1;
+    }
+
+    private static String lineIndent(String source, int offset) {
+        int start = lineStart(source, offset);
+        int end = start;
+        while (end < source.length()) {
+            char c = source.charAt(end);
+            if (c != ' ' && c != '\t') break;
+            end++;
+        }
+        return source.substring(start, end);
     }
 
     private static void addRelations(Set<String> output, String list, String namespace,
@@ -704,12 +1142,23 @@ public class PhpDefinitionIndex {
     enum Hint { TYPE, FUNCTION, CONSTANT, ANY }
     enum TypeKind { CLASS, INTERFACE, TRAIT, ENUM }
     record Definition(Path file, Kind kind, String qualifiedName, Location location) {}
+    record MethodDeclaration(String name, String signature, Location location) {}
     record TypeDefinition(Path file, String name, String qualifiedName, TypeKind kind,
                           int declarationStart, int nameStart, int bodyStart, int bodyEnd,
-                          Location location, Set<String> parents, Map<String, Location> methods) {}
+                          Location location, Set<String> parents, Set<String> traits,
+                          Map<String, Location> methods,
+                          Map<String, MethodDeclaration> methodDeclarations,
+                          boolean abstractType) {}
     record PositionData(int line, int col) {}
     record OffsetRange(int start, int end) {}
+    record Insertion(Position position, String text) {}
     public record ImplementationAnchor(int line, int offset, String symbol, boolean method) {}
+    public record MissingInterfaceImplementation(
+            String className,
+            Range range,
+            Position insertion,
+            String implementation,
+            List<String> methodNames) {}
     record Snapshot(Path root, Map<String, List<Definition>> symbols,
                     List<TypeDefinition> types, Map<String, List<Location>> occurrences) {
         static Snapshot empty(Path root) {
